fix h1 dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,6 +75,10 @@ html.dark {
     background-color: #000000;
     color: #fff;
   }
+
+  .dark h1 {
+    color: #fff;
+  }
   
   .dark a {
     background-color: #000000;
